feat: paths repositories and controllers
